2007-01-28  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpitempropundo.[ch]: new undo class which handles
	ITEM_RENAME, ITEM_DISPLACE, ITEM_VISIBILITY and ITEM_LINKED undos.

	* app/core/gimpimage-undo-push.c: use the new undo class and
	remove the resp. code here.

2007-01-28  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpimageundo.[ch]: new undo class which handles
	GIMP_UNDO_IMAGE_TYPE, GIMP_UNDO_IMAGE_SIZE and
	GIMP_UNDO_IMAGE_RESOLUTION.

	* app/core/gimpimage-undo-push.c: use the new undo class and
	remove the resp. code here.

	* app/core/gimpimage-undo.h: changed include guards to not
	conflict with gimpimageundo.h

2007-01-28  Sven Neumann  <sven@gimp.org>

	* app/dialogs/authors.xsl: fixed spelling of "auto-generated".

	* app/tools/gimprectangletool.c: removed unused declaration.

2007-01-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawableundo.c (gimp_drawable_undo_constructor):
	add the passed TileManager's size to undo->size.

	* app/core/gimpimage-undo-push.c (gimp_image_undo_push_drawable):
	no need to get and pass the TileManager's size here.

2007-01-28  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpchannelundo.[ch]: new GimpItemUndo subclass which
	handles all the channel undo stuff itself.

	* app/core/gimpimage-undo-push.c: removed all channel undo code
	here and simply create a GimpChannelUndo instance.

2007-01-26  Tor Lillqvist  <tml@novell.com>

	Fix #398311 in GIMP until corresponding abstraction has been added
	to GLib:

	* app/base/tile-private.h: Use gint64 instead of off_t. (I assume
	the configury makes sure GIMP is always compiled as
	large-file-aware on Unix with an off_t of at least 64 bits?)

	Introduce wrapper macros LARGE_SEEK() and LARGE_TRUNCATE(). On
	Win32 LARGE_SEEK() calls _lseeki64() in the Microsoft C library,