@@ -115,6 +115,7 @@ typedef struct _GimpItemUndo        GimpItemUndo;
 typedef struct _GimpItemPropUndo    GimpItemPropUndo;
 typedef struct _GimpChannelUndo     GimpChannelUndo;
 typedef struct _GimpDrawableUndo    GimpDrawableUndo;
+typedef struct _GimpLayerPropUndo   GimpLayerPropUndo;
 typedef struct _GimpUndoStack       GimpUndoStack;
 typedef struct _GimpUndoAccumulator GimpUndoAccumulator;
 
